WL-808 | Alignment fix of "Show Sent Email History" Table in RTL.

--- a/edx-platform/israelxedu.gov.il/lms/static/sass/_overrides.scss
+++ b/edx-platform/israelxedu.gov.il/lms/static/sass/_overrides.scss
@@ -1652,9 +1652,9 @@ header.header-main {
     width: 1097px !important;
   }
   .content-history-table-inner .ui-state-default.slick-header-column {
-    width: 217px !important;
+    width: 219px !important;
   }
   .instructor-dashboard-content-2 .content-history-table-inner .slickgrid .slick-cell {
-    width: 217px;
+    width: 219px;
   }
 }
